--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -46,9 +46,9 @@ msgctxt "field:magento.product.type,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
 
-msgctxt "field:product.product,magento_product_type:"
+msgctxt "field:product.template,magento_product_type:"
 msgid "Product Type"
-msgstr "Tipo producto"
+msgstr "Tipo de producto"
 
 msgctxt "help:magento.app,from_products:"
 msgid "This date is the range to import (filter)"
