--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -32,11 +32,11 @@ msgstr "ID"
 
 msgctxt "field:magento.product.type,name:"
 msgid "Name"
-msgstr "Nom del camp"
+msgstr "Nom"
 
 msgctxt "field:magento.product.type,rec_name:"
 msgid "Name"
-msgstr "Nom del camp"
+msgstr "Nom"
 
 msgctxt "field:magento.product.type,write_date:"
 msgid "Write Date"
