--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -113,6 +113,42 @@ msgctxt "field:magento.app,top_menu:"
 msgid "Top Menu"
 msgstr "Menú principal"
 
+msgctxt "field:magento.attribute.configurable,active:"
+msgid "Active"
+msgstr "Activo"
+
+msgctxt "field:magento.attribute.configurable,create_date:"
+msgid "Create Date"
+msgstr "Fecha creación"
+
+msgctxt "field:magento.attribute.configurable,create_uid:"
+msgid "Create User"
+msgstr "Usuario creación"
+
+msgctxt "field:magento.attribute.configurable,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:magento.attribute.configurable,mgn_id:"
+msgid "Mgn ID"
+msgstr "Mgn ID"
+
+msgctxt "field:magento.attribute.configurable,name:"
+msgid "Name"
+msgstr "Nombre"
+
+msgctxt "field:magento.attribute.configurable,rec_name:"
+msgid "Name"
+msgstr "Nombre"
+
+msgctxt "field:magento.attribute.configurable,write_date:"
+msgid "Write Date"
+msgstr "Fecha modificación"
+
+msgctxt "field:magento.attribute.configurable,write_uid:"
+msgid "Write User"
+msgstr "Usuario modificación"
+
 msgctxt "field:magento.product.type,active:"
 msgid "Active"
 msgstr "Activo"
@@ -185,6 +221,10 @@ msgctxt "field:magento.sale.shop.group.price,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
 
+msgctxt "field:product.template,magento_attribute_configurable:"
+msgid "Configurable Attribute"
+msgstr "Atributos configurables"
+
 msgctxt "field:product.template,magento_group_price:"
 msgid "Magento Grup Price"
 msgstr "Magento precio grupo"
@@ -233,13 +273,9 @@ msgctxt "help:magento.app,to_id_products:"
 msgid "This Integer is the range from import (filter)"
 msgstr "El rango de IDs para importar (filtro)"
 
-msgctxt "help:magento.product.type,active:"
-msgid ""
-"If the active field is set to False, it will allow you to hide the product "
-"without removing it."
-msgstr ""
-"Si el campo activo no está activado, puede ocultar el producto sin "
-"eliminarlo."
+msgctxt "help:magento.attribute.configurable,mgn_id:"
+msgid "Magento ID"
+msgstr "Magento ID"
 
 msgctxt "help:magento.product.type,code:"
 msgid "Same name Magento product type, (example: simple)"
@@ -258,13 +294,25 @@ msgid "If check this value, when export product prices add prices by group"
 msgstr ""
 "Si marca esta opción, cuando exporte precios añade el precio por grupo"
 
+msgctxt "model:ir.action,name:act_magento_attribute_configurable_form"
+msgid "Magento Attribute Configurable"
+msgstr "Magento Atributos Configurables"
+
 msgctxt "model:ir.action,name:act_magento_product_type_form"
 msgid "Magento Product Type"
 msgstr "Tipos producto Magento"
 
+msgctxt "model:ir.ui.menu,name:menu_magento_attribute_configurable_form"
+msgid "Magento Attribute Configurable"
+msgstr "Magento Atributos Configurables"
+
 msgctxt "model:ir.ui.menu,name:menu_magento_product_type_form"
 msgid "Magento Product Type"
 msgstr "Tipo producto Magento"
+
+msgctxt "model:magento.attribute.configurable,name:"
+msgid "Magento Attribute Configurable"
+msgstr "Magento Atributos Configurables"
 
 msgctxt "model:magento.product.type,name:"
 msgid "Magento Product Type"
@@ -285,6 +333,10 @@ msgstr "Global"
 msgctxt "selection:magento.app,catalog_price:"
 msgid "Website"
 msgstr "Sitio Web"
+
+msgctxt "view:esale.catalog.menu:"
+msgid "Magento"
+msgstr "Magento"
 
 msgctxt "view:magento.app:"
 msgid "Export"
@@ -321,6 +373,10 @@ msgstr "Importar/Actualizar Magento Productos"
 msgctxt "view:magento.app:"
 msgid "Products"
 msgstr "Productos"
+
+msgctxt "view:magento.attribute.configurable:"
+msgid "Magento Attribute Configurable"
+msgstr "Magento Atributos Configurables"
 
 msgctxt "view:magento.product.type:"
 msgid "Magento Product Type"
