--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -388,6 +388,10 @@ msgid "Magento"
 msgstr "Magento"
 
 msgctxt "view:magento.app:"
+msgid "Catalog"
+msgstr "Catàleg"
+
+msgctxt "view:magento.app:"
 msgid "Export"
 msgstr "Exporta"
 
